--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,6 @@ android {
     }
 }
 
-apply plugin: 'com.google.gms.google-services'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -38,4 +37,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-firestore:21.3.1'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
+    implementation 'com.android.support:design:28.0.0'
 }
+apply plugin: 'com.google.gms.google-services'
