--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'androidx.biometric:biometric:1.0.0-alpha03'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
@@ -37,7 +36,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-firestore:21.3.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
